# recli

./: CMakeLists.txt  README.md
.github/: FUNDING.yml
docs/: api-reference.md
include/: api_scanner.h  cli.h  decompiler.h  offset_scanner.h  scanner.h  string_extractor.h  utils.cpp  utils.h
scripts/: deploy.sh  setup_dependencies.sh
src/: cli.cpp  main.cpp
